--- a/01git.html
+++ b/01git.html
@@ -12,6 +12,7 @@
     <h1>第四次代码</h1>
     <h1>第五次代码</h1>
     <h1>第六次代码</h1>
-    <h1>第气次代码</h1>
+    <h1>第七次代码</h1>
+    <h1>第八次代码</h1>
 </body>
 </html>
